wow such work x3

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -173,6 +173,8 @@
   title={The Arithmetic of Elliptic Curves},
   author={Silverman, J.H.},
   publisher={Springer},
+  year={1991},
+  series={Graduate Texts in Mathematics},
 }
 
 @article{klunerspauli,
