--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -209,3 +209,21 @@
   year={2004},
   publisher={Cambridge University Press}
 }
+
+@book{stewtall,
+  title={Algebraic Number Theory and Fermat's Last Theorem},
+  author={Stewart, I. and Tall, D.},
+  year={2002},
+  publisher={A K Peters}
+}
+
+@book{cassels,
+  title={Lectures on Elliptic Curves},
+  author={Cassels, J.W.S.},
+  isbn={9780521425308},
+  lccn={92160903},
+  series={London Mathematical Society Student Texts},
+  url={http://books.google.co.uk/books?id=zgqUAuEJNJ4C},
+  year={1991},
+  publisher={Cambridge University Press}
+}
