--- a/doc/report.tex
+++ b/doc/report.tex
@@ -95,8 +95,8 @@ We also apply these techniques to problems relating to elliptic curves over the 
 \tableofcontents
 
 \chapter{Introduction}
-This report deals with the algorithmic solution of a problem arising from algebraic number theory. 
-Other interesting situations to which this algorithm can be applied are also looked at.
+In this report we develop algorithmic methods for the solution of a problem arising from algebraic number theory. 
+We detail some interesting situations in which this algorithm can be applied at the end.
 
 The report is organised as follows.
 We first go through the background material needed to motivate, define and describe the solution of our problems in chapter~\ref{chap:background}.
@@ -268,13 +268,22 @@ such that for every occurrence of a triple $N_1 \xrightarrow{g_1} N_2 \xrightarr
 
 In any short exact sequence we therefore have $f_1$ injective and $f_2$ surjective.
 
-%TODO split
+\begin{defn}[Split short exact sequence]
+A short exact sequence $0 \to M_1 \xrightarrow{q} M_2 \xrightarrow{r} M_3 \to 0$ is called \emph{split} if any of the following equivalent conditions hold:
+\begin{enumerate}[(i)]
+\item There is a map $t\colon M_2 \to M_1$ such that $t\circ q$ is the identity on $M_1$.
+\item There is a map $u\colon M_3 \to M_2$ such that $u\circ r$ is the identity on $M_2$.
+\item $M_2 \cong M_1 \oplus M_3$.
+\end{enumerate}
+\end{defn}
+
 
 \section{Algebraic number theory}
 \label{sec:ant}
 
-Algebraic number began with the study of algebraic numbers and their uses in solving Diophantine equations but has since expanded to encompass a huge amount of mathematics involving the use of algebraic techniques to tackle number theoretic problems. %TODO ????
-As above, more details about anything not proved here can be found in any of the many texts on algebraic number theory, for example \cite{neukirch}, \cite{lang} or \cite{narkiewicz}.
+Algebraic number began with the study of algebraic numbers and their uses in solving Diophantine equations.
+The subject has since expanded to encompass a huge amount of mathematics involving the use of algebraic techniques to tackle number theoretic problems. %TODO ????
+As above, more details about anything not proved here can be found in any of the many texts on algebraic number theory, for example \cite{neukirch}, \cite{lang}, \cite{narkiewicz} or \cite{stewtall}.
 
 \begin{defn}[Number field]
 A \emph{number field} $K$ is a field that is also a finite dimensional $\QQ$-vector space.
@@ -301,7 +310,7 @@ Similarly degree 3 number fields are called \emph{cubic}.
 \minisec{}
 The following few definitions are central to the whole problem.
 
-A number field will often have a large number of subrings, which may be of interest to us, however not all subrings are as nice as we would like them to be.
+A number field will have a large quantity of subrings, only some of which are of real number theoretic interest.
 So we distinguish some subrings that have desirable properties and single them out for study.
 
 \begin{defn}[Order]
@@ -361,8 +370,7 @@ Highlighted in bold is a suborder of index 3 in this order.
 
 We now introduce the background material relevant to elliptic curves, one of the intended applications of these methods.
 This is not required for the main problem discussed in chapter~\ref{chap:prob}, but section~\ref{sec:ellapp} uses these ideas heavily.
-As with the above sections everything here can be found in textbooks on elliptic curves (such as \cite{knapp}), we offer a rapid summary moving quickly to the notions relevant to the project in this overview.
-%TODO more refs
+As with the above sections everything here can be found in textbooks on elliptic curves (such as \cite{knapp} or \cite{cassels}), we offer a rapid summary, moving quickly to the notions relevant to the project in this overview.
 
 \begin{defn}[Elliptic curve]
 For us an \emph{elliptic curve} $E$ defined over a field $K$ will be given by a binary cubic equation of the form
@@ -407,7 +415,7 @@ This plot of the real points is typical for an elliptic curve, though there can 
 
 One of the things that makes elliptic curves so interesting to study is the fact that we can define a natural way of adding points of the curve over some field, with this definition the set of points on the curve becomes a group.
 
-\begin{defn}[Group law] %TODO dates to Jacobi??
+\begin{defn}[Group law]
 We define the sum of two points $P,Q\in E(K)$ as follows, let $L$ be the line joining $P$ and $Q$ (take $L$ to be the tangent at $P$ if $P=Q$).
 Then $L$ intersects $E$ in three points (with multiplicity) so there is one point in addition to $P$ and $Q$ on both $L$ and $E$, call this point $R$.
 Now there is at most one other point with the same $x$ coordinate as $R$ that lies on $E$, this is our sum $P+Q$.
@@ -459,7 +467,8 @@ Given an order $R$ of an absolute number field $K$ and an integer $I$ find the s
 \[\left\{ \O\subseteq R \mid \O\text{ is a suborder},\ [R:\O] = I\right\}.\]
 \end{prob}
 
-To find a suborder we really mean compute a $\ZZ$ basis for the order, as such a basis defines an order completely.
+To find a suborder we really mean to compute a $\ZZ$ basis for the order in terms of the basis of the larger order.
+Such a basis defines an order completely.
 With $R$ and $I$ as in the proposition we introduce the following notation to refer to the set we are looking for.
 
 \[\Orders(R,I) = \left\{ \O\subseteq R \mid \O\text{ is a suborder},\ [R:\O] = I\right\}.\]
@@ -518,17 +527,23 @@ If $\ZZ_K = \ZZ + \ZZ\alpha$ and $R = \ZZ + \ZZ m\alpha$ then
 \begin{proof}
 This follows immediately from the above description of orders of $K$ (proposition~\ref{prop:quadord}) and the fact that the index is multiplicative (corollary \ref{cor:indexmult}).
 \end{proof}
-%TODO make sure we get the solution to match the problem statement! arbitrary starting order!
 
 Orders in quadratic fields appear in the theory of elliptic curves with complex multiplication.
-While the solution to our problem in this special case is not useful here as the theory is so simple, it is maybe conceivable that our methods could find application in generalisations of the theory of complex multiplication (to higher dimensional abelian varieties).
-%TODO explain this lots, why our methods aren't really useful here. Conceivable that a solution to this problem could be useful in generalisations of this theory to other abelian varieties?
+Specifically an elliptic curve has an associated ring, the \emph{endomorphism ring}, defined by
+\[
+\End(E) = \left\{ f\colon E \to E \mid f(x,y) = (\frac{a(x,y)}{b(x,y)},\frac{c(x,y)}{d(x,y)}) \text{ for } (x,y) \in E\setminus 0 \text{ and } f(0) = 0\right\}. %TODO complete
+\]
+The endomorphism ring of a curve is either isomorphic to $\ZZ$ or an order $\O$ of an imaginary quadratic number field (i.e. a quadratic number field $K$ where $K\cap \RR \ne K$).
+In the second case the curve is said to have \emph{complex multiplication}, the theory of such curves is interesting and has practical applications in the field of cryptography.
+A general solution to our problem is of course not particularly useful here as the situation is so simple.
+However it is maybe conceivable that our methods could find application in generalisations of the theory of complex multiplication (to higher dimensional abelian varieties).
+This is not a direction we have pursued but it might be worthwhile to do so.
 
 %TODO cubic????
 
 \section{Monogenic orders}
 
-We now look at a special class of orders that have, in effect, been studied extensively by other authors.
+We now look at a special class of orders that have been studied extensively by other authors, though the focus of their methods has been slightly different to ours.
 
 \begin{defn}[Monogenic order]
 An order of the form $\ZZ[\alpha]$ for some algebraic integer $\alpha$ is called \emph{monogenic}.
@@ -563,6 +578,8 @@ and there is no $\beta\in \ZZ_K$ such that $\ZZ_K=\ZZ[\beta]$. %TODO check
 %TODO give examples of non-monogenic orders, orders with n-1 ring gens for any n??
 
 %TODO explain that in some ways idea was to generalise this to arbitrary orders
+While our techniques differ from the ones developed for monogenic orders we originally were inspired to consider this problem after using an implementation of some of these techniques in the Magma computational algebra system \cite{magma}.
+
 
 \section{Cocyclic orders}
 \label{sec:cocyc}
@@ -570,11 +587,11 @@ We recall some definitions and results given by Johannes Brakenhoff in his thesi
 These will be helpful when considering the class of cocyclic orders, defined as follows.
 
 \begin{defn}[Cocyclic order]
-An order $\O$ of a number field $K$ is called \emph{cocyclic} if
+Given two orders $R$ and $S$ of a number field $K$ the order $R$ is called \emph{cocyclic} in $S$ if $R$ is a suborder of $S$ and
 \[
-\ZZ_K/\O \cong \ZZ/m\ZZ,
+S/R \cong \ZZ/m\ZZ,
 \]
-i.e. the quotient of the maximal order of the $K$ by $\O$ is a cyclic group.
+i.e. the quotient of $S$ by $R$ is a cyclic group.
 \end{defn}
 
 \begin{ex}
@@ -587,7 +604,7 @@ Then as $\ZZ_K = \ZZ[\alpha]$ we have
 \[
 \ZZ_K/\O = \ZZ[\alpha]/\O \cong \ZZ/5\ZZ
 \]
-and so $\O$ is cocyclic.
+and so $\O$ is cocyclic in $\ZZ_K$.
 \end{ex}
 
 The following theorem is given in \cite[Thm. 4.1]{brakenhoff}, it will allow us to find cocyclic orders very easily.
@@ -631,6 +648,7 @@ We therefore have the short exact sequence of $Z$-modules
 
 The image of $f$ above is still well defined for non-cocyclic orders and this ideal is known as the \emph{conductor} of $\O$ in $R$. %TODO just defined for maximal?
 Earlier we called the order $\ZZ + f\ZZ_K$ of a quadratic number field the order of conductor $f$, note that with our new terminology the conductor of $\ZZ + f\ZZ_K$ in $\ZZ_K$ is the ideal $(f)$.
+An equivalent definition for the conductor of an order $R$ in another $S$ is that it is the largest ideal of $S$ contained in $R$. %TODO check
 Though it is not actually required for an algorithmic resolution of our problem (we go the other way, via $g$, in our approach) being able to find the conductor of an order is useful for experimentation.
 An algorithm for computing the conductor is given in \cite{klunerspauli}.
 
@@ -659,7 +677,7 @@ This gives the following algorithm to find cocyclic suborders with index $I$ in 
 
 \begin{alg}
 \label{alg:cocyc}~\\
-\begin{algorithm}[H] %TODO fix this, do we need to check if order?
+\begin{algorithm}[H]
 \For{For all ideals $J$ of $R$ of index $I^2$}{
 Let $M = \ZZ + I$.\\
 \If{$M$ is of index $I$}
@@ -753,15 +771,23 @@ Assuming that we are given a change of basis matrix $A$ from the basis of an ord
 For a full rank $\ZZ$-submodule to be a subring and hence an order we require that it contain 1 and be multiplicatively closed, determining the first of these properties quickly is relatively easy, whereas the second is a little harder.
 We'll consider them both below.
 
+To determine if a submodule contains 1 
 
-
-In \cite{cohen93} Cohen gives the basic . %TODO lrn2sentence
-
-\begin{alg} 
+\begin{alg}~\\
+\label{alg:hasone}
 \begin{algorithm}[H]
-\label{alg:isring}
+Check in mat zz.\\
+\end{algorithm}
+\end{alg} 
+%TODO local property?
+
+In \cite{cohen93} Cohen gives the general method for determining if a finitely generated submodule of a ring is closed under multiplication.
+The correctness of the method hinges on the fact that if the products of all pairs of basis elements lie inside the module, then the product of any two linear combinations of these elements lie inside the module too.
+
+\begin{alg}~\\
+\label{alg:multclose}
+\begin{algorithm}[H]
 Input: $H$.\\
-Check if $1\in M$.\\
 Find matrix.\\
 Compute HNF.\\
 Check equality.\\
@@ -774,7 +800,7 @@ Check equality.\\
 \begin{algorithm}[H]
 \For{all $n\times n$ HNF matrices $H$ of determinant $I$}{
 Find the submodule $M$ of $R$ corresponding to $H$.\\
-\If{$M$ is a ring (via algorithm~\ref{alg:isring})}
+\If{$M$ is a ring (via algorithm~\ref{alg:hasone} and algorithm~\ref{alg:multclose})}
 {
 add $M$ to the output.
 }
@@ -782,10 +808,8 @@ add $M$ to the output.
 \end{algorithm}
 \end{alg}
 
-
 In fact using the lemma~\ref{lem:onebasis} we can improve this algorithm slightly.
-As we know that we can always include 1 in the basis of an order and of course as all orders necessarily contain 1 we 
-%TODO speed up including 1
+As we know that we can always include 1 in the basis of an order and as all orders necessarily contain 1 we 
 
 \begin{alg}~\\
 \begin{algorithm}[H]
@@ -803,7 +827,7 @@ H' =
 \right).
 \]
 Find the submodule $M$ of $R$ corresponding to $H'$.\\
-\If{$M$ is multiplicatively closed}
+\If{$M$ is multiplicatively closed (algorithm~\ref{alg:multclose})}
 {
 add $M$ to the output.
 }
@@ -844,7 +868,7 @@ Similarly the set of HNF matrices used can be computed in parallel and whether t
 \subsection{Timings}
 In order to get an idea for how these algorithms behave in practice we have timed the different methods on several large input sets.
 The algorithms were run on ...
-\begin{table}[h]
+\begin{table}[H]
 \begin{tabular}{|p{14em}|l|l|l|}
 \hline
 Input & HNF algorithm & Conductor algorithm & Hybrid \\
@@ -896,7 +920,7 @@ Letting $\alpha$ be the image of $x$ in the above quotient, we can see that $ \Z
 %TODO conclude, several variants developed all with advantages disadvantages
 
 \section{Further work}
-It seems likely that other properties of the orders we are looking for could be used to speed up the algorithms given above and so further investigations into both special and general cases could yield interesting results.
+It seems likely that other properties of the orders we are looking for could be used to speed up the algorithms given above and so further investigations into both special and general cases could yield results.
 Further applications of these methods are certainly possible and it would be interesting to see what other areas these methods can be used in. %TODO find another word that isn't "interesting".
 
 %Low-degree optimisations.
